# Orbsys

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  TECHNICAL.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_notifications_feed_scores.py  0003_member_applications.py  (+4 more)
apps/api/src/: main.py
apps/api/tests/: conftest.py  test_auth.py  test_members.py
apps/blind/: Dockerfile  pyproject.toml
apps/blind/src/: main.py
apps/web/: Dockerfile  next.config.ts  package.json  tailwind.config.ts
apps/web/src/: middleware.ts
design/: OrbSys_datamodel_v1.md  OrbSys_deployment_v1.md  OrbSys_simulation_v1.md  orbsys_mockup_v2.html
docs/: DEPLOY.md  OPERATIONS.md  OrbSys_v7.md  PAAS_Efficiency_Analysis__Small_Teams__Massive_Output.md  PAAS_INTERPRETATIONS.md  PAAS_Operational_Execution.md  WHITEPAPER.md  paas-v2.jsx
docs/Orbsys/: OrbSys_bootstrap_v2.md  OrbSys_engines_v2.md  TECHNICAL.md
docs/PAAS/: Crisis_Scenario_Comparisons__Governance_Under_Stress.md  Issue_Lifecycle__The_Forked_Path.mermaid  Multi-Dimensional_Governance_Radar_Charts.md
infra/: docker-compose.yml
infra/postgres/: init.sql
services/inferential/: pyproject.toml
services/inferential/src/: main.py
services/insight/: Dockerfile  pyproject.toml
services/insight/src/: main.py
services/integrity/: Dockerfile  pyproject.toml
services/integrity/src/: main.py
tests/agents/: README.md  agent.py  client.py  config.py  factory.py  metrics.py  pyproject.toml  runner.py  setup.py
tests/agents/scenarios/: adversarial.py  normal.py  stress.py
(+83 files in other folders)
