[project]
name = "orbsys-blind"
version = "0.1.0"
description = "Orb Sys — Blind Review API (isolated, port 8001)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
