[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "orbsys-agents"
version = "0.1.0"
description = "Orb Sys — Agent Simulation & Test Engine"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-anyio>=0.0.0"]

[tool.setuptools.packages.find]
where = ["."]
